postgresql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - postgresql.appdevops.work.gd
    secretName: mytls-secret 
  rules:
  - host: postgresql.appdevops.work.gd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-postgresql
            port:
              number: 5432
